# pgr-semestralka-new

./: .gitignore  CMakeLists.txt  Cube.cpp  Object.cpp  Object.h  Program.h  main.cpp
imgui/src/: imgui_impl_glfw_gl3.cpp
res/: chalet.mtl  chalet2.mtl  cube.mtl  unicube.mtl
shd/: light.frag  light.vert  phong.frag  phong.vert  simple.frag  simple.vert
src/: Camera.cpp  Camera.h  Cube.cpp  Cube.h  GLObject.cpp  GLObject.h  GLResource.cpp  Light.cpp  Light.h  Material.cpp  Material.h  Model.cpp  Model.h  Object.cpp  Object.h  Program.cpp  Program.h  SceneGraph.cpp  SceneGraph.h  Texture.cpp  Texture.h  geometry.cpp  geometry.h  glmUniforms.cpp  main.cpp
